* Release 2.5.1 (2003/07/05)

Critical fix to the checksumming code, which wouldn't work if messages
got out of sync between client and server. This is *incompatible* with
version 2.5.0.

Fixed documentation comments on message integrity.

* Release 2.5.0 (2003/07/02)

Dropped backwards compatibility with Zebedee 1.x versions of the protocol.

Added message integrity checking ("checksumlevel" and "minchecksumlevel"
keywords), "dropunknownprotocol" and "lockprotocol" features and per-target
address checking. These are all derived from patches submitted by Henrick
Lund. Great work Henrick!

Added the ability to hand the peer address, target address and target
port to key generation commands (add a "+" to the end of the command
to get three extra arguments provided).

Added "httpproxyauth" -- thanks to James CE Johnson.

Added "runasuser/-N" -- thanks to Thomas Melzer.

Added per-target ID checking -- originally by Alain Turbide.

Fixed a bug with "anonymous" tunnel specs (using a "*" to default to
the server address).

Fixed bug writing to syslog when detached -- thanks to Kyle Dent.

Set FD_SETSIZE to 512 by default on Windows, to allow many more simultaneous
connections to be handled correctly (approx 250). This can be overridden
at compile time. Thanks to John W Campbell.

Bug fix for 64-bit HPUX support. Thanks to Kris Laporte.

* Release 2.4.1 (2002/05/29)

Fixed incorrect selection of client TCP/UDP mode when handler function is
run in-line (as a result of debug, multiuse or command setting).

Fixed message when client requests incompatible TCP/UDP mode.

Added "dumpdata" keyword to enable a dump of local traffic when this is
true (and the verbosity level is 5 or greater).

Added support for BSD/OS (OS=bsdi) in the Makefile -- thanks to Brett Wynkoop.

* Release 2.4.0 (2002/05/09)

Added support for building on MacOS X (sorry, no support for "classic" MacOS
yet). This required a larger initial thread stack size, which can now be
specified at compile time.
